Bug 1691129 - Align the priority column header icon with the icon in the tree. r=aleca

--- a/calendar/base/themes/linux/calendar-task-tree.css
+++ b/calendar/base/themes/linux/calendar-task-tree.css
@@ -3,3 +3,11 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 @import url(chrome://calendar/skin/shared/calendar-task-tree.css);
+
+.calendar-task-tree-col-priority > .treecol-icon {
+  padding-inline-end: 4px;
+}
+
+:root[lwt-tree] .calendar-task-tree-col-priority > .treecol-icon {
+  padding-inline-end: 1px;
+}
